# kdeconnect-kde

daemon/: kdeconnectd.desktop.cmake
plugins/telephony/: CMakeLists.txt  kdeconnect_telephony_config.desktop  telephony_config.cpp  telephony_config.h  telephony_config.ui  telephonyplugin.cpp
